# LLM-Eval-CI-CD

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: llm-eval.yml
config/: eval.yaml  pipeline.yaml
data/golden_dataset/: questions.yaml
data/knowledge_base/docs/billing/: annual_billing.md  billing_contacts.md  cancellation.md  enterprise_policy.md  failed_payments.md  gift_subscriptions.md  invoicing.md  payment_methods.md  pro_plan.md  proration.md  seat_licensing.md  tax_vat.md  trial_conversion.md  upgrades_downgrades.md
data/knowledge_base/docs/product/: api_limits.md  custom_branding.md  export_data.md  integrations.md  mobile_app.md  team_plan.md  webhooks.md
infrastructure/docker/: Dockerfile
infrastructure/grafana/dashboards/: llm-eval-overview.json
migrations/: 001_initial_schema.sql
prompts/: system_prompt.yaml
scripts/: build_golden_dataset.py  init_db.sh  smoke_test.sh
src/llm_eval/: __init__.py  cli.py  service.py
src/llm_eval/agents/: __init__.py  crew.py
src/llm_eval/config/: __init__.py  loader.py
src/llm_eval/dataset/: __init__.py  loader.py  validator.py
src/llm_eval/execution/: __init__.py  collector.py  modal_app.py  runner.py
src/llm_eval/gates/: __init__.py  evaluator.py  github.py
src/llm_eval/models/: __init__.py  types.py
src/llm_eval/pipeline/: __init__.py  rag_pipeline.py  retriever.py
src/llm_eval/reporting/: __init__.py  comparison.py  excel_exporter.py  pdf_exporter.py  report_builder.py
src/llm_eval/scorers/: __init__.py  accuracy_scorer.py  base.py  cost.py  hallucination.py  latency.py  orchestrator.py  ragas_scorer.py  relevancy.py  security_scorer.py
src/llm_eval/storage/: __init__.py  local.py  postgres.py  s3.py
tests/: conftest.py
tests/unit/: test_accuracy_scorer.py  test_dataset.py  test_gates.py  test_reporting.py  test_scorers.py  test_security_scorer.py
(+16 files in other folders)
