[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-eval"
version = "1.0.0"
description = "Automated evaluation framework for LLM-powered systems with CI/CD merge gates"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AI Engineering" }]
keywords = ["llm", "evaluation", "ci-cd", "rag", "quality-gates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "anthropic>=0.40",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "psycopg[binary,pool]>=3.2",
    "boto3>=1.35",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
scorers = [
    "sentence-transformers>=3.0",
    "ragas>=0.2",
    "datasets>=3.0",
]
modal = ["modal>=0.64"]
agents = [
    "crewai>=0.80",
    "crewai-tools>=0.14",
]
reporting = [
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
all = ["llm-eval[scorers,modal,agents,reporting,dev]"]

[project.scripts]
llm-eval = "llm_eval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
